--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lucide-react": "^0.268.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
