--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
+    "sweetalert": "^2.1.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
